<resources>
    <string name="stringAppName">4tests</string>
    <string name="stringMainText">Создавайте и делитесь тестами с людьми\nиз любой точки мира!</string>
    <string name="stringCreateTest">Создать тест</string>
    <string name="stringOpenTest">Пройти тест</string>
    <string name="stringAbout">О приложении</string>
    <string name="stringSelectTest">Выберите тест</string>
    <string name="stringError">Возникла ошибка при обращении к серверу\nПопробуйте обновить приложение до последней версии</string>
    <string name="stringNoTests">На данный момент нет доступных тестов в общем доступе</string>
    <string name="stringTestCreate">Создание теста</string>
    <string name="stringName">Название</string>
    <string name="stringDirection">Направление</string>
    <string name="stringCompleteTime">Продолжительность теста (мин.)</string>
    <string name="stringPassword">Пароль (необяз.)</string>
    <string name="stringEndDate">Дата закрытия теста</string>
    <string name="stringContinue">Далее</string>
    <string name="stringEnterName">Введите название</string>
    <string name="stringEnterDirection">Введите направление</string>
    <string name="stringEnterCompleteTime">Введите продолжительность теста</string>
    <string name="stringCreateTasks">Добавьте вопросы</string>
    <string name="stringAdd">+</string>
    <string name="stringAddTask">Добавить вопрос</string>
    <string name="stringTask">Вопрос</string>
    <string name="stringVariant">Вариант ответа</string>
    <string name="stringMinus">-</string>
    <string name="stringTasksLimit">Достигнуто ограничение на количество вопросов</string>
    <string name="stringVariantsLimit">Достигнуто ограничение на количество вариантов ответа</string>
    <string name="stringTaskNoText">У одного из вопросов не указан текст</string>
    <string name="stringTaskNoRightVariant">У одного из вопросов не указаны верные варианты ответа</string>
    <string name="stringVariantNoText">У одного из вариантов ответа не указан текст</string>
    <string name="stringConfirm">Подтвердите данные</string>
    <string name="stringTasksCount">Количество вопросов</string>
    <string name="stringTestCreated">Тест был успешно создан\nЕго ID:</string>
    <string name="stringStart">Начать</string>
    <string name="stringQuestionNumber">Вопрос №</string>
    <string name="stringTestEnded">Тест завершен</string>
    <string name="stringRightAnswers">Правильных ответов:</string>
    <string name="stringTotalTasksCount">Всего вопросов:</string>
    <string name="stringYourMark">Ваша оценка:</string>
    <string name="stringEnterPassword">Введите пароль:</string>
    <string name="stringPasswordHint">Пароль</string>
    <string name="stringCancel">Отмена</string>
    <string name="stringIncorrectPassword">Неверный пароль!</string>
    <string name="stringEnterId">Введите ID теста:</string>
    <string name="stringSearch">Поиск</string>
    <string name="stringID">ID</string>
    <string name="stringNotFoundTest">Тест с данным ID не был найден</string>
</resources>