<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.tests_create.TestsCreateActivity">

    <ImageView
        android:id="@+id/testsCreateBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/testsCreateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:text="@string/stringTestCreate"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/testsCreateBack"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/testsCreateNameLayout"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColorHint="@color/colorWhite"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterTextColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testsCreateTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/testsCreateName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stringName"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/testsCreateDirectionLayout"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColorHint="@color/colorWhite"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testsCreateNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/testsCreateDirection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stringDirection"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/testsCreateCompleteTimeLayout"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColorHint="@color/colorWhite"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:counterTextColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testsCreateDirectionLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/testsCreateCompleteTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stringCompleteTime"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/testsCreatePasswordLayout"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColorHint="@color/colorWhite"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/colorWhite"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testsCreateCompleteTimeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/testsCreatePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/stringPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/testsCreateContinue"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/stringContinue"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:backgroundTint="@color/colorWhite"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>